# mcp-serial-hid-kvm

./: .gitignore  README.md  pyproject.toml
src/mcp_serial_hid_kvm/: __init__.py  config.py  ocr.py  server.py
