[project]
name = "mcp-serial-hid-kvm"
version = "0.1.0"
description = "MCP server for KVM control — thin client for serial-hid-kvm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "sunasaji"}]
keywords = ["mcp", "mcp-server", "kvm", "ai-agent", "claude", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]
dependencies = [
    "serial-hid-kvm",
    "mcp>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.urls]
Homepage = "https://github.com/sunasaji/mcp-serial-hid-kvm"
Repository = "https://github.com/sunasaji/mcp-serial-hid-kvm"
Issues = "https://github.com/sunasaji/mcp-serial-hid-kvm/issues"

[project.scripts]
mcp-serial-hid-kvm = "mcp_serial_hid_kvm.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
